--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "controlefinanceiro2",
+  "name": "controlefinanceiro",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -39,14 +39,14 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "@react-native-picker/picker": "2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
