--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "expo-updates": "~0.26.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
