refatorar: mover componente HomeScreen para novo arquivo e adicionar configuração de preview no eas.json

--- a/eas.json
+++ b/eas.json
@@ -17,6 +17,11 @@
         "gradleCommand": ":app:assembleRelease"
       }
     },
+    "preview_android": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "production": {
       "autoIncrement": true,
       "channel": "production"
